--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
     <img class="card-img-top" src="Card1.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Shayek Ahmed</h5>
+	    <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://www.facebook.com/ShayekAhmedTurjo" role="button">Facebook</a>
+  </p>
     </div>
   </div>
   <div class="card">
