--- a/index.html
+++ b/index.html
@@ -85,12 +85,18 @@
     <img class="card-img-top" src="Card2.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">@bespry</h5>
+	    <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://twitter.com/bespry" role="button">Twitter</a>
+  </p>
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="Card3.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">spryshayek798</h5>
+	    <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://www.instagram.com/spryshayek798/" role="button">Instagram</a>
+  </p>
     </div>
   </div>
 </div>
