--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <h4 class="card-title">Acting Manager</h4>
 	<h6 class="card-title">Bismillah Fabrics</h6>
 <p class="card-text">and</p>
-    <h4 class="card-title">Former Telemarketing Excecutive</h4>
+    <h4 class="card-title">Former Telemarketing Executive</h4>
 	<h6 class="card-title">Skytech</h6>
   </div>
 </div>
