--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <h1 class="display-4">Nice to see you here...</h1>
   <p class="lead">I'm an Ex-Telemarketer, Writer, Singer and a Great Listener.</p>
   <hr class="my-4">
-  <p>During the pandemic in 2020, I worked as a Telemarketing Executive. After that I joined a business company as an acting Manager. I've gained a remarkable experience during this time. And I look forward to gain more in future.</p>
+  <p>During the pandemic in 2020, I worked as a Telemarketing Executive. After that I joined a business company as an Acting Manager. I've gained a remarkable experience during this time. And I look forward to gain more in future.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="https://www.facebook.com/ShayekAhmedTurjo" role="button">Facebook</a>
   </p>
@@ -125,7 +125,7 @@
   <div class="card-body">
     <h4 class="card-title">Diploma in Engineering</h4>
 	<h6 class="card-title">Daffodil Polytechnic Institute</h6>
-    <p class="card-text">Department of Computer Technology</p>
+    <p class="card-text">Department of Computer Science and Technology</p>
   </div>
 </div>
 </div>
